# grit

./: .filter  Cargo.toml  README.MD  test_file.txt  test_versions.json
.grit/: commits.json  config  tree.json
.grit/versions/: test_file.json
src/: main.rs
src/algorithms/: mod.rs
src/algorithms/fcompress/: compress.rs  mod.rs  test.rs
src/algorithms/vcompare/: compv.rs  difference.rs  edit.rs  mod.rs  test.rs  utils.rs
src/structure/: mod.rs  node.rs  operations.rs  ptree.rs  serialization.rs  test.rs  transversal.rs
src/systems/: add.rs  add_test.rs  init.rs  init_test.rs  mod.rs  tests.rs
src/systems/commits/: commit.rs  function_test.rs  functions.rs  log.rs  mod.rs  model.rs  test.rs  version_test.rs  versioning.rs
src/systems/filters/: filter.rs  mod.rs  test.rs
