[package]
name = "grit"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
toml = "0.8.19"
chrono = "0.4.39"
flate2 = "1.0.35"
tempfile = "3.16.0"
serde_json = "1.0.138"
sha1 = "0.11.0-pre.4"
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0.217", features = ["derive"] }
